--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/x-icon" href="/portfolio-logo.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>Otávio Cunha | Mobile Engineer & UI/UX Researcher</title>
+  <meta name="title" content="Otávio Cunha | Mobile Engineer & UI/UX Researcher" />
+  <meta name="description"
+    content="Engenheiro de Software e Pesquisador de UI/UX especializado em ecossistemas Mobile. Criando experiências digitais de alto impacto com estética premium e precisão técnica." />
+  <meta name="keywords"
+    content="Otávio Cunha, Mobile Engineer, UI/UX Researcher, Software Engineer, Portfolio, iOS, Android, React Native, Swift, UI Design" />
+  <meta name="author" content="Otávio Cunha" />
+  <meta name="theme-color" content="#d4af37" />
+
+  <!-- Open Graph / Facebook / LinkedIn -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://psiotavio.com.br/" />
+  <meta property="og:title" content="Otávio Cunha | Mobile Engineer & UI/UX Researcher" />
+  <meta property="og:description"
+    content="Engenheiro de Software e Pesquisador de UI/UX especializado em ecossistemas Mobile. Criando experiências digitais de alto impacto." />
+  <meta property="og:image" content="/portfolio-logo.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://psiotavio.com.br/" />
+  <meta property="twitter:title" content="Otávio Cunha | Mobile Engineer & UI/UX Researcher" />
+  <meta property="twitter:description"
+    content="Engenheiro de Software e Pesquisador de UI/UX especializado em ecossistemas Mobile. Criando experiências digitais de alto impacto." />
+  <meta property="twitter:image" content="/portfolio-logo.png" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
